--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vue-axios": "^3.2.0",
+    "vuex": "latest",
+    "vue": "latest"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
