change Docker from dev to prod env

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quasar-admin",
+  "name": "message-dashboard",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
   "productName": "Quasar Admin",
